suppress native access